<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="false"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        app:srcCompat="@drawable/feu" />

    <EditText
        android:id="@+id/nomIdentification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:hint="@string/nom"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/motDePasse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="2"
        android:hint="@string/motDePasse"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24dp" />

    <Button
        android:id="@+id/boutonOK"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="2"
        android:background="@drawable/oval"
        android:text="@string/ok"
        android:textSize="20dp" />

    <Button
        android:id="@+id/boutonCreate"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>