<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/feu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/nouveauNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/nom"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps" />

        <EditText
            android:id="@+id/nouveauNomUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/nouveauPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:text="@string/prenom"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps" />

        <EditText
            android:id="@+id/nouveauPrenomUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/prenom"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/nouveauEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps" />

        <EditText
            android:id="@+id/nouveauEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimaryDark" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/nouveauAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/age"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps" />

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/nouveauMDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mdp"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps" />

        <EditText
            android:id="@+id/nouveauMDPUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/mdp"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" />

    </RelativeLayout>

    <Button
        android:id="@+id/boutonOkCreate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="0.5"
        android:background="@drawable/oval"
        android:text="@string/ok" />

</LinearLayout>