<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageButton
            android:id="@+id/feu"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/feu" />

        <ImageButton
            android:id="@+id/compte"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@color/colorAccent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/pictogramme" />

        <ImageButton
            android:id="@+id/messagerie"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="false"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:adjustViewBounds="true"
            android:background="@color/colorAccent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/star" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
            style="@style/SwitchCompatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notif" />

        <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch3"
        style="@style/SwitchCompatStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataSharing" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch4"
            style="@style/SwitchCompatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buggyFeatures" />



    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirmPrefs" />

</LinearLayout>